# Profile-Pulse

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILDING.md  BUILD_SUCCESS.md  Cargo.toml  DISCLOSURE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  test contacts.csv  test_contact.vcf
.agents/: BUILDING.md  BUILD_SUCCESS.md  DROPDOWN_IMPLEMENTATION.md  MULTIPLE_ENTRIES_SUMMARY.md  SOCIAL_PROFILE_HANDLING.md
.agents/samples/: test contact.vcf
.ai/: AGENTS_GLOBAL.md  DISCLOSURE.md  DROPDOWN_IMPLEMENTATION.md  DROPDOWN_USAGE_GUIDE.md  GUI_URL_LABELS.md  IMPLEMENTATION_SUMMARY.md  LABELS_ARCHITECTURE.md  LABELS_STATUS.md  MULTIPLE_ENTRIES_SUMMARY.md  QUICKSTART.md  README.md  SOCIAL_PROFILE_HANDLING.md  STATUS.md  UI_IMPROVEMENTS_2026-01-14.md  URL_ARCHITECTURE_STATUS.md  VCF_CURRENT_STATUS.md  WORKSPACE_ARCHITECTURE.md
.ai/logs/: 2026-01-14.md  2026-01-15-dropdown-implementation.md  2026-01-15-remove-database.md  2026-01-15-structured-names.md  2026-01-15-workspace-system.md  2026-01-15.md
.github/workflows/: ci.yml
docs/: API_INTEGRATION.md  ARCHITECTURE.md  DEVELOPMENT.md  PLAN.md  ROADMAP.md
openspec/: config.yaml
openspec/changes/profile-picture-fetching/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/vcf-contact-photo-sync/: design.md  proposal.md  tasks.md
openspec/reference/: API_INTEGRATION.md  BUILDING.md  BUILD_SUCCESS.md  DEVELOPMENT.md  DROPDOWN_IMPLEMENTATION.md  DROPDOWN_USAGE.md  GUI_URL_LABELS.md  IMPLEMENTATION_SUMMARY.md  MULTIPLE_ENTRIES.md  QUICKSTART.md  SOCIAL_PROFILE_HANDLING.md  UI_IMPROVEMENTS.md
src/: main.rs
src/core/: contact.rs  labels.rs  mod.rs
src/db/: mod.rs  models.rs  repository.rs
src/discovery/: mod.rs
src/social/: mod.rs
src/ui/: mod.rs
src/utils/: error.rs  mod.rs
src/vcf/: mod.rs  repository.rs
src/workspace/: mod.rs
(+23 files in other folders)
